[package]
edition = "2021"
name = "cameraui-rust-decoder"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.9.2", default-features = false, features = ["napi9"] }
napi-derive = "3.5.6"
yuvutils-rs = { version = "0.8.3" }
fast_image_resize = { version = "6.0.0", features = ["rayon"] }
image = "0.25.10"

[build-dependencies]
napi-build = "2.3.2"

[profile.release]
lto = true
strip = "symbols"
